[package]
name = "saying"
description = "The say! macro for convenient styled printing"
authors = ["Nye James"]
readme = "README.md"
repository = "https://github.com/nyejames/saying"
version = "0.1.7"
include = [
    "src/lib.rs",
    "src/say.rs",
    "README.md",
    "LICENSE.txt",
    "Cargo.toml",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["ansi", "color", "print", "macro", "styling"]
categories = ["command-line-utilities", "command-line-interface", "development-tools::debugging"]

[dependencies]
# Yeah, that's right. ABSOLUTELY NONE.